--- a/www/index.html
+++ b/www/index.html
@@ -6,49 +6,31 @@
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
   <script src="components/acao.js"></script>
+
   <link rel="stylesheet" href="components/loader.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    <div class="row">
-        <div class="col">
-            <div class="form-group">
-                <label> Digite seu nome: </label>
-            <input class="form-control bg-warning" id="nome" type="string"></input>
-            </div>
-        </div>
-    </div>
-  <div class="container"> 
+    <div class="container">
       <div class="row">
           <div class="col">
-              <div class= "mt-3 d-grid gap-2"> 
-              <button class="btn btn-primary" id="entrar"> Entrar </button>
-              </div>
-        </div> 
-      </div>
+           <div class="form-group">
+             <div class="d-grip gap-2">
+           <button class="btn btn-primary" id="sacn">  Ler código</button>
+            </div>
+           </div>
+         </div>
+       </div>    
+    </div>
+
         <div class="row">
           <div class="col">
-            <div class="form-group">
-                <label> Digite sua idade: </label>
-             <input class="form-control bg-warning" id="idade" type="number"></input>
+            <div id="dados">
+
             </div>
-        </div>
-     </div>
-      <div class="row">
-          <div class="col">
-              <div class= "mt-3 d-grid gap-2"> 
-              <button class="btn btn-primary" id="verificar"> Verificar </button>
-              </div>
-        </div> 
-      </div>
-      <div class="row">
-          <div class="col">
-              <div class= "mt-3 d-grid gap-2"> 
-              <button class="btn btn-primary" id="vibrar"> Sair </button>
-              </div>
-        </div> 
-      </div>
-  </div>
+          </div>    
+       </div>
 </body>
 </html>
