--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
           <div class="col">
            <div class="form-group">
              <div class="d-grip gap-2">
-           <button class="btn btn-primary" id="sacn">  Ler código</button>
+           <button class="btn btn-primary" id="scan">  Ler código</button>
             </div>
            </div>
          </div>
@@ -28,7 +28,7 @@
         <div class="row">
           <div class="col">
             <div id="dados">
-
+                <img src="" id="foto">
             </div>
           </div>    
        </div>
